--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     ></script>
 
     <title>Weather App</title>
+
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -36,6 +38,7 @@
               id="cityName"
               placeholder="Enter city name"
             />
+            <!-- Suggesstions -->
             <ul id="suggestions" class="list-group position-absolute mt-2"></ul>
           </div>
           <div class="mb-5 d-flex justify-content-center">
