--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               type="submit"
               class="btn btn-primary"
             >
-              Search
+              Search Current Weather
             </button>
           </div>
         </div>
@@ -67,6 +67,19 @@
           ></div>
         </div>
       </div>
+      <!-- Forecast -->
+      <div class="mb-5 d-flex justify-content-center">
+        <button
+          onclick="weatherForecast();"
+          type="submit"
+          class="btn btn-primary"
+        >
+          Forecast
+        </button>
+      </div>
+
+      <!-- Forecast Data Container -->
+      <div id="forecastData" class="row justify-content-center"></div>
     </div>
 
     <script src="script.js"></script>
